--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ h1, h2, h3 { color: #3B5526; }
 a { -moz-outline: none; }
 
 body {
-  font-size: 16px;
+  font-size: 1em;
   color: #222;
   background: #eee;
   font-family: 'Open Sans', Helvetica, Arial, sans-serif;
