--- a/sympy-live/css/live-core.css
+++ b/sympy-live/css/live-core.css
@@ -1,6 +1,6 @@
 .sympy-live-output {
     font-family: monospace;
-    font-size: 12pt;
+    font-size: 1em;
     margin: 0;
     padding: 0.25em;
     width: 99%;
@@ -20,7 +20,7 @@
 
 .sympy-live-caret {
     font-family: monospace;
-    font-size: 12pt;
+    font-size: 1em;
     width: 5%;
     border: 1px solid silver;
     margin: 0;
@@ -36,11 +36,11 @@
 
 .sympy-live-prompt {
     font-family: monospace;
-    font-size: 12pt;
+    font-size: 1em;
     width: 93%;
     border: 1px solid silver;
     margin: 0;
-    padding: 5px;
+    padding: 5px 0;
     margin-left: 0;
     border-left: 0;
     padding-left: 0;
@@ -104,7 +104,6 @@ button:hover {
     height: 50px;
     top: 50%;
     margin-top: -25px;
-    border-radius: 5px;
     opacity: .8;
     text-align: center;
     line-height: 50px;
@@ -161,4 +160,121 @@ button:hover {
   width: 50%;
   font-family: 'Open Sans', sans-serif;
   font-size: 0.9em;
+}
+
+#banner {
+  display: none;
+}
+
+.content {
+  padding: 0.1em;
+}
+
+#main {
+  width: 65%;
+}
+
+#main .block .content {
+  max-width: 100%;
+}
+
+#footer .block {
+  max-width: 100%;
+}
+
+#sidebar {
+  width: 30%;
+}
+
+#main h1 {
+  display: none;
+}
+
+#main.fullscreen {
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  z-index: 1000;
+  min-width: 960px;
+}
+
+#main.fullscreen .sympy-live-output {
+  width: 100%;
+}
+
+#main.fullscreen .sympy-live-caret {
+  width: 2.5em;
+}
+
+#main.fullscreen .sympy-live-prompt {
+  position: absolute;
+  left: 2.5em;
+  right: 0.1em;
+  width: auto;
+}
+
+#main.fullscreen h1 {
+  font-weight: 300;
+  font-size: 2em;
+  float: left;
+  margin-left: 0.25em;
+  display: block;
+}
+
+#main.fullscreen .content, #main.fullscreen .block {
+  margin: 0;
+  width: 100%;
+  max-width: 100%;
+  height: 100%;
+  background: #DDD;
+}
+
+#main.fullscreen #shell {
+  height: 100%;
+}
+
+#main.fullscreen #make-one-off-button {
+  width: 100%;
+  background-size: 32px 32px;
+  background-position: 50% 0;
+  background-repeat: no-repeat;
+}
+
+
+/* Responsive design */
+
+/* Phones */
+@media screen and (max-device-width: 767px) {
+  #main {
+    float: right;
+    width: 100%;
+  }
+
+  #sidebar {
+    float: left;
+    width: 100%;
+  }
+
+  #example, #other_shells {
+    display: none;
+  }
+
+  #main .block .content, #footer .block {
+    min-width: 100%;
+  }
+
+  .sympy-live-output, .sympy-live-caret, .sympy-live-prompt {
+    font-size: 1em;
+  }
+
+  .sympy-live-caret {
+    width: 20%;
+  }
+
+  .sympy-live-prompt {
+    width: 78%;
+  } 
 }
