--- a/sympy-live/css/live-core.css
+++ b/sympy-live/css/live-core.css
@@ -267,10 +267,14 @@ button:hover {
   }
 
   .sympy-live-caret {
-    width: 20%;
+    width: 15%;
   }
 
   .sympy-live-prompt {
-    width: 78%;
+    width: 83%;
+  }
+
+  .content {
+    padding: 0;
   }
 }
