--- a/sympy-live/css/live-autocomplete.css
+++ b/sympy-live/css/live-autocomplete.css
@@ -10,8 +10,6 @@
 }
 
 .sympy-live-completions button {
-    background-color: #3b5526;
-    color: #FFF;
     height: 100%;
     font-family: monospace;
     width: 100%;
@@ -90,4 +88,90 @@
     -o-transform: rotate(-180deg) translate(0px, 0px);
     -ms-transform: rotate(-180deg) translate(0px, 0px);
     -transform: rotate(-180deg) translate(0px, 0px);
+}
+
+@media screen and (max-device-width: 767px) {
+  .sympy-live-completions {
+    padding: 0em 0.25em;
+    height: 2em;
+    vertical-align: center;
+    font-size: 12pt;
+    width: 82%;
+  }
+
+  .sympy-live-completions li {
+    height: 2em;
+    background-color: #3b5526;
+    padding: 0 0.5em;
+    color: #FFF;
+    margin-bottom: 0.5em;
+    width: 70%;
+  }
+
+  .sympy-live-completions em {
+    color: #000;
+  }
+
+  .sympy-live-completions button {
+    border: 0;
+    padding: 0 0.25em;
+  }
+
+  .sympy-live-completions.expanded {
+    -webkit-overflow-scrolling: touch;
+  }
+
+  p.sympy-live-toolbar select {
+    margin-right: 10px;
+  }
+
+  .sympy-live-completions-toolbar {
+    width: 15%;
+    height: 30px;
+  }
+
+  .sympy-live-completions-toolbar button {
+    height: 45px;
+    width: 100%;
+  }
+
+  .sympy-live-completions-toolbar .sympy-live-toolbar button {
+    width: 100%;
+    margin: 0;
+    border: 0;
+    border-bottom: 1px solid #000;
+    padding: 0.5em 0;
+  }
+  
+  .sympy-live-completions-toolbar .sympy-live-toolbar button:last-child {
+    border: 0;
+  }
+
+  #sympy-live-completions-prev, #sympy-live-completions-next, #sympy-live-completions-toggle {
+    display: none;
+  }
+
+  @media only screen and (max-width: 320px){
+    .sympy-live-completions {
+      width: 67%;
+    }
+    .sympy-live-completions-toolbar {
+      width: 30%;
+    }
+    .sympy-live-completions li, .sympy-live-completions.expanded li {
+      width: 70%;
+    }
+  }
+
+  @media only screen and (min-width: 321px){
+    .sympy-live-completions {
+      width: 77%;
+    }
+    .sympy-live-completions-toolbar {
+      width: 20%;
+    }
+    .sympy-live-completions li, .sympy-live-completions.expanded li {
+      width: 40%;
+    }
+  }
 }
