--- a/sympy-live/css/live-core.css
+++ b/sympy-live/css/live-core.css
@@ -88,7 +88,7 @@ button:hover {
 }
 
 .sympy-live-processing {
-    background-image: url("/static/spinner.gif");
+    background-image: url("/static/sympy-live/images/spinner.gif");
 }
 
 .sympy-live-toolbar > button.sympy-live-evaluate-disabled {
@@ -264,17 +264,53 @@ button:hover {
 
   .sympy-live-output, .sympy-live-caret, .sympy-live-prompt {
     font-size: 1em;
+    padding: 0;
   }
 
   .sympy-live-caret {
-    width: 15%;
+    width: 50px;
   }
 
   .sympy-live-prompt {
-    width: 83%;
+    position: absolute;
+    width: auto;
+    right: 30px;
+    left: 50px;
   }
 
   .content {
     padding: 0;
+  }
+
+  .sympy-live-toolbar {
+    margin: 0;
+  }
+
+  .sympy-live-completions-toolbar {
+    height: auto;
+  }
+
+  #sympy-live-toolbar-history {
+    display: inline-block;
+    width: 30px;
+    height: 5em;
+    position: absolute;
+    right: 0;
+    font-family: monospace;
+  }
+
+  #sympy-live-toolbar-history button {
+    margin-left: 0;
+    display: inline;
+    width: 100%;
+    height: 50%;
+  }
+
+  #make-one-off-button {
+    float: none;
+    width: 100%;
+    background-size: 32px 100%;
+    background-repeat: no-repeat;
+    background-position: 50% 0;
   }
 }
