--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,8 @@
 .small { font-size:11px; }
 .gray { color:#a2b0b6; }
 .hightlight { background-color:#d6e7c7; }
-
-a:link, a:visited, a:hover, a:active { color: #81B953; } 
-a:link, a:visited, a:active { text-decoration: none; }
+a:link { color: #29A329; text-decoration: none; } 
+a:visited, a:active { text-decoration: none; color: #307748; }
 a:hover { text-decoration: underline; }
 h1, h2, h3 { color: #3B5526; }
 a { -moz-outline: none; }
