--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 .small { font-size:11px; }
 .gray { color:#a2b0b6; }
 .hightlight { background-color:#d6e7c7; }
-a:link { color: #29A329; text-decoration: none; } 
-a:visited, a:active { text-decoration: none; color: #307748; }
+a:link { color: #4FAF00; text-decoration: none; }
+a:visited, a:active { text-decoration: none; color: #577C37; }
 a:hover { text-decoration: underline; }
 h1, h2, h3 { color: #3B5526; }
 a { -moz-outline: none; }
@@ -23,19 +23,14 @@ hr {
   color: #f0f0ee;
 }
 
-#header {
-  background: #3B5526;
-  border-bottom: 3px solid #81B953;
-}
-
 #header h1{
   font-family: "Gentium Basic", "Times New Roman", serif;
-  font-weight: normal;
+  font-weight: bold;
 }
 
 #header h1 a:link, #header h1 a:active, 
 #header h1 a:hover, #header h1 a:visited {
-  color: #FFF;
+  color: #3B5526;
 }
 
 #main .block .content {
@@ -63,7 +58,6 @@ hr {
 }
 
 #main-navigation ul li.active {
-  border-bottom: none;
   font-weight: bold;
 }
 
@@ -90,6 +84,7 @@ hr {
 #main-navigation ul li.active a:hover, 
 #main-navigation ul li.active a:active {
   background-color: #81B953;
+  border-radius: 5px;
 }
 
 .secondary-navigation {
