Fix margin of content

--- a/css/base.css
+++ b/css/base.css
@@ -267,7 +267,7 @@ footer a:link, footer a:visited, footer a:hover, footer a:active {
   }
 
   #main {
-    margin: 0;
+    margin-top: 0;
   }
 
   #content {
