--- a/sympy-live/css/live-core.css
+++ b/sympy-live/css/live-core.css
@@ -22,11 +22,11 @@
     font-family: monospace;
     font-size: 1em;
     width: 5%;
-    border: 1px solid silver;
+    border: 0;
+    border-top: 1px solid silver;
     margin: 0;
     padding: 5px;
     margin-right: 0;
-    border-right: 0;
     padding-right: 0;
     outline: none;
     overflow: hidden;
@@ -37,8 +37,9 @@
 .sympy-live-prompt {
     font-family: monospace;
     font-size: 1em;
-    width: 93%;
-    border: 1px solid silver;
+    width: 94%;
+    border: 0;
+    border-top: 1px solid silver;
     margin: 0;
     padding: 5px 0;
     margin-left: 0;
@@ -112,10 +113,15 @@
 }
 
 .sympy-live-dialog div textarea {
-  width: 80%;
+  width: 100%;
   display: block;
   margin: auto;
   height: 300px;
+  font-family: monospace;
+}
+
+.sympy-live-dialog div button {
+  padding: 0.5em;
 }
 
 #make-one-off-button {
@@ -152,23 +158,11 @@
   padding: 0.1em;
 }
 
-#main {
-  width: 65%;
-}
-
-#main .block .content {
-  max-width: 100%;
-}
-
-#footer .block {
-  max-width: 100%;
-}
-
-#sidebar {
-  width: 30%;
-}
-
 /* Sidebar card-specific styling */
+
+.sidebar_card h3:first-child {
+  cursor: pointer;
+}
 
 #user .content {
   padding: 0;
@@ -257,16 +251,6 @@
 
 /* Phones */
 @media screen and (max-device-width: 767px) {
-  #main {
-    float: right;
-    width: 100%;
-  }
-
-  #sidebar {
-    float: left;
-    width: 100%;
-  }
-
   #example, #other_shells {
     display: none;
   }
@@ -287,7 +271,7 @@
   .sympy-live-prompt {
     position: absolute;
     width: auto;
-    right: 30px;
+    right: 50px;
     left: 50px;
   }
 
@@ -308,7 +292,7 @@
     width: 30px;
     height: 5em;
     position: absolute;
-    right: 0;
+    right: 20px;
     font-family: monospace;
   }
 
@@ -325,5 +309,56 @@
     background-size: 32px 100%;
     background-repeat: no-repeat;
     background-position: 50% 0;
+  }
+
+  .sympy-live-dialog {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    padding: 10px;
+    bottom: 0;
+    background-color: rgba(1,1,1,0.8);
+  }
+
+  .sympy-live-dialog div {
+    height: 100%;
+  }
+
+  .sympy-live-dialog div textarea {
+    height: 70%;
+  }
+}
+
+/* Force use of small-grid */
+
+@media (min-width: 768px) {
+  .small_span_0 {
+    width: 0;
+    margin: 0;
+  }
+
+  .small_span_1 {
+    width: 14.6%;
+  }
+
+  .small_span_2 {
+    width: 31.3%;
+  }
+
+  .small_span_3 {
+    width: 50%;
+  }
+
+  .small_span_4 {
+    width: 66.6%;
+  }
+
+  .small_span_5 {
+    width: 83.3%;
+  }
+
+  .small_span_6 {
+    width: 100%;
   }
 }
