--- a/sympy-live/css/live-core.css
+++ b/sympy-live/css/live-core.css
@@ -100,6 +100,7 @@
   padding: 100px;
   bottom: 0;
   background-color: rgba(1,1,1,0.8);
+  z-index: 10001;
 }
 
 .sympy-live-dialog div {
@@ -146,7 +147,6 @@
 
 #settings select {
   width: 50%;
-  font-family: 'Open Sans', sans-serif;
   font-size: 0.9em;
 }
 
